--- a/src/group.pug
+++ b/src/group.pug
@@ -27,12 +27,12 @@ block content
             div.mt-step
                 include layouts/modules/parts/collective
             h2.mt-step.smallFont Меню
-            .linkFile.mt-step
+            .linkFile.mt-step.linkFile--reverseOnMobile
                 .linkFile__icon
                     img(src="@img/yandexDiskIcon.svg", alt='yandex')
                 .linkFile__text Актуальное меню на яндекс.диске
                 +usualButton('Смотреть меню', 'ml-auto', '#')
-            .linkFile.mt-step
+            .linkFile.mt-step.linkFile--reverseOnMobile
                 .linkFile__icon
                     img(src="@img/yandexDiskIcon.svg", alt='yandex')
                 .linkFile__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания.
