--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -15,6 +15,9 @@ $mobileNumber: 480
 $mobile: $mobileNumber + px
 $tablet: 800px
 
+$lastResponsePointNumber: 375
+$lastResponsePoint: $lastResponsePointNumber + px
+
 $sizeForWeakEyes: 24
 
 
@@ -28,3 +31,5 @@ $sidebarResponse: $sidebarResponseNumber + px
 
 $gridX2ResponseNumber: 900
 $gridX2Response: $gridX2ResponseNumber + px
+
+$increaseBannerImagesResponse: 450px
