--- a/src/styles/modules/parts/banner.sass
+++ b/src/styles/modules/parts/banner.sass
@@ -215,6 +215,9 @@ html.theme-visually-impaired
       flex: 0 0 auto
       margin: 0 em(51, 16)
 
+    @media screen and (max-width: $increaseBannerImagesResponse)
+      margin: 0
+
 .banner--blue
 
   background: var(--blueBannerBackground)
