--- a/src/styles/modules/parts/galleryItem.sass
+++ b/src/styles/modules/parts/galleryItem.sass
@@ -27,11 +27,8 @@ html.theme-visually-impaired
   &:hover
     background: var(--greyBackground)
 
-  @media screen and (max-width: $galleryFirstTextResponse)
-    font-size: 1.65vw
-
   @media screen and (max-width: $galleryMobileResponse)
-    font-size: 2.6vw
+    font-size: .85rem
     &:not(:last-child)
       margin-right: em(15, 16)
 
