--- a/src/styles/modules/parts/spoilers.sass
+++ b/src/styles/modules/parts/spoilers.sass
@@ -32,8 +32,8 @@ $spoilersSecondResponse: 500px
     height: 0
 
   &__text
-    padding: .5em em(30, 14) em(30, 14) em(15, 14)
-    font-size: em(14, 16)
+    padding: em(7, 16) em(30, 16) em(30, 16) em(15, 16)
+    font-size: 1em
     letter-spacing: -0.017em
     line-height: 1.5
     border-top: 1px solid #E7E7EC
@@ -43,3 +43,4 @@ $spoilersSecondResponse: 500px
 
     @media screen and (max-width: $spoilersSecondResponse)
       padding: .5em em(18, 14)
+      font-size: em(14, 16)
