--- a/src/collective.pug
+++ b/src/collective.pug
@@ -40,12 +40,11 @@ block content
                                             | Воспитатель
                                         else
                                             | Заведующий
-                                    .collectiveSlide__text
+                                    .collectiveSlide__text(class= index !== 0 ? '' : 'collectiveSlide__text--greyArea')
                                         if(index !== 0)
                                             | Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни.
                                         else
-                                            | Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек,
-                                            span.grey  открывший истину, которого я бы назвал зодчим ...
+                                            | Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим ...
                                     a(href= index === 0 ? 'employee.html' : 'employee_2.html').collectiveSlide__link
                                         span
                                         | Подробнее
