Edits are ready

--- a/src/components/videoNotForTextPage.pug
+++ b/src/components/videoNotForTextPage.pug
@@ -3,4 +3,4 @@ mixin videoNotForTextPage(preview, id)
         .video__preview
             img(src=preview, alt='video')
             .videoSign
-        iframe(width="560" loading='lazy' height="300" src="https://www.youtube.com/embed/nZr1oqL0oZk" id=id title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
+        iframe(width="560" loading='lazy' height="300" src="https://www.youtube.com/embed/nZr1oqL0oZk" id=id title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
