--- a/src/layouts/modules/parts/bigBannerBlue.pug
+++ b/src/layouts/modules/parts/bigBannerBlue.pug
@@ -6,9 +6,9 @@ section
         .banner.banner--blue
             .banner__info.banner__info--centerContentOnMobile
                 .banner__subtitle МДОАУ
-                .banner__title Детский сад №73
+                h2.banner__title Детский сад №73
                 .banner__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину.
                 +whiteButton('Подробнее о нас', 'bigButton', "about.html")
-            a.banner__image(href="#" target="blank")
+            .banner__image
                 div.img
                     +videoNotForTextPage('@img/temporary/banner-2.png', 'banner-video')
