--- a/src/layouts/modules/parts/bigBannerGrey.pug
+++ b/src/layouts/modules/parts/bigBannerGrey.pug
@@ -5,7 +5,7 @@ section
         .banner.banner--complex-image
             .banner__info
                 .banner__subtitle МДОАУ
-                .banner__title Детский сад №73
+                h2.banner__title Детский сад №73
                 .banner__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину.
                 +usualButton('Подробнее о нас', 'bigButton', "about.html")
             .banner__image
