--- a/src/styles/modules/parts/banner.sass
+++ b/src/styles/modules/parts/banner.sass
@@ -230,6 +230,8 @@ html.theme-visually-impaired
   @media screen and (max-width: $secondBannerResponse)
     background: url("../img/banner-rectangle-blue.svg") 12% 10% / em(1939, 16) em(937, 16) no-repeat, var(--blueBannerBackground)
 
+  .banner__title
+    color: #ffffff
 
   .banner__subtitle
     color: var(--blueBannerSubtitleColor)
