--- a/src/components/video.pug
+++ b/src/components/video.pug
@@ -3,4 +3,4 @@ mixin video()
         .video__preview.big-image.withBlur
             img(src="@img/temporary/video-preview-1.png", alt='video')
             .videoSign
-        iframe(width="560" height="315" src="https://www.youtube.com/embed/nZr1oqL0oZk" id="groupVideo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
+        iframe(width="560" height="315" src="https://www.youtube.com/embed/nZr1oqL0oZk" id="groupVideo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
