--- a/src/layouts/modules/parts/smallBanner.pug
+++ b/src/layouts/modules/parts/smallBanner.pug
@@ -4,9 +4,9 @@ section
     .container
         .smBanner
             .smBanner__info
-                .smBanner__text Не можете записать ребёнка в сад?
-                .smBanner__text Хотите рассказать о воспитателях?
-                .smBanner__text Знаете, как улучшить питание и занятия?
+                h2.smBanner__text Не можете записать ребёнка в сад?
+                h2.smBanner__text Хотите рассказать о воспитателях?
+                h2.smBanner__text Знаете, как улучшить питание и занятия?
                 +whiteButton('Написать сообщение', 'bigButton', 'feedback.html')
             .smBanner__img
                 img(src="@img/temporary/smBanner-1.png", loading='lazy', alt='image')
