--- a/src/styles/modules/parts/video.sass
+++ b/src/styles/modules/parts/video.sass
@@ -8,12 +8,14 @@
   position: relative
   border-radius: em(30, 16)
   overflow: hidden
+  max-height: 100%
 
 
   iframe
     @include useAbsolutePosition()
     width: 100%
     height: 100%
+    border: 0
     z-index: 1
 
   &__preview
